feat: 实现自动更新功能
- 新增 UpdateNotification 组件，用于展示可用更新和下载进度。
- 创建 AboutUpdateSettings 组件，用于管理更新相关配置。
- 引入 updateApi，用于处理与更新相关的 IPC 调用。
- 实现 useUpdateNotification hook，用于管理更新通知。
- 在主 App 组件中集成更新检查和通知显示功能。
- 在 About 页面中新增路由和设置项，包括更新设置。
- 在 shared 包中定义更新相关的接口，以提升类型安全性。
- 移除 mcp-client-hub 包中已废弃的测试文件。
- 更新 pnpm lockfile，以反映依赖变更。

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,23 +27,115 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'pnpm'
+          cache: pnpm
 
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
 
+      # macOS 代码签名配置
+      - name: Setup macOS code signing
+        if: matrix.os == 'macos-latest'
+        run: |
+          # 创建临时 keychain
+          security create-keychain -p "${{ secrets.KEYCHAIN_PASSWORD }}" build.keychain
+          security default-keychain -s build.keychain
+          security unlock-keychain -p "${{ secrets.KEYCHAIN_PASSWORD }}" build.keychain
+
+          # 导入代码签名证书
+          echo "${{ secrets.CSC_LINK }}" | base64 --decode > certificate.p12
+          security import certificate.p12 -k build.keychain -P "${{ secrets.CSC_KEY_PASSWORD }}" -T /usr/bin/codesign
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "${{ secrets.KEYCHAIN_PASSWORD }}" build.keychain
+
+          # 清理临时文件
+          rm certificate.p12
+
+      # Windows 代码签名配置
+      - name: Setup Windows code signing
+        if: matrix.os == 'windows-latest'
+        run: |
+          # 解码并保存证书文件
+          echo "${{ secrets.WIN_CSC_LINK }}" | base64 --decode > certificate.p12
+        shell: bash
+
       - name: Build app (Windows)
         if: matrix.os == 'windows-latest'
         run: pnpm build:win
+        env:
+          # Windows 代码签名环境变量
+          WIN_CSC_LINK: certificate.p12
+          WIN_CSC_KEY_PASSWORD: ${{ secrets.WIN_CSC_KEY_PASSWORD }}
+          # GitHub 发布配置
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build app (macOS)
         if: matrix.os == 'macos-latest'
         run: pnpm build:mac
+        env:
+          # macOS 代码签名环境变量
+          CSC_LINK: ${{ secrets.CSC_LINK }}
+          CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
+          # macOS 公证环境变量（可选）
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_ID_PASS: ${{ secrets.APPLE_ID_PASS }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+          NOTARIZE: ${{ secrets.NOTARIZE_ENABLED || 'false' }}
+          # GitHub 发布配置
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: release
-        uses: softprops/action-gh-release@v1
+      # 清理敏感文件
+      - name: Cleanup sensitive files
+        if: always()
+        run: |
+          if [ -f "certificate.p12" ]; then
+            rm certificate.p12
+          fi
+        shell: bash
+
+      # 验证构建产物
+      - name: Verify build artifacts (Windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          echo "验证 Windows 构建产物..."
+          ls -la packages/electron/release/*/
+
+          # 检查必要的文件是否存在
+          if [ ! -f packages/electron/release/*/latest.yml ]; then
+            echo "错误: 缺少 latest.yml 文件"
+            exit 1
+          fi
+
+          # 验证签名（如果有签名工具）
+          echo "Windows 构建产物验证完成"
+        shell: bash
+
+      - name: Verify build artifacts (macOS)
+        if: matrix.os == 'macos-latest'
+        run: |
+          echo "验证 macOS 构建产物..."
+          ls -la packages/electron/release/*/
+
+          # 检查必要的文件是否存在
+          if [ ! -f packages/electron/release/*/latest-mac.yml ]; then
+            echo "错误: 缺少 latest-mac.yml 文件"
+            exit 1
+          fi
+
+          # 验证代码签名
+          for dmg in packages/electron/release/*/*.dmg; do
+            if [ -f "$dmg" ]; then
+              echo "验证 $dmg 的签名..."
+              codesign -v "$dmg" || echo "警告: $dmg 签名验证失败"
+            fi
+          done
+
+          echo "macOS 构建产物验证完成"
+
+      # 上传构建产物到 GitHub Releases
+      - name: Upload release assets
+        uses: softprops/action-gh-release@v2
         with:
           draft: true
+          generate_release_notes: true
           files: |
             packages/electron/release/*/*.exe
             packages/electron/release/*/*.zip
@@ -59,4 +151,52 @@ jobs:
             !packages/electron/release/*/*-debug.yml
             !packages/electron/release/*/*debug.yml
         env:
-          GITHUB_TOKEN: ${{ secrets.ANT_CHAT_RELEASE }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  # 发布后验证作业
+  post-release-verification:
+    needs: release
+    runs-on: ubuntu-latest
+    if: always()
+
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v4
+
+      - name: Verify release assets
+        run: |
+          echo "验证发布资产..."
+
+          # 获取当前标签
+          TAG_NAME=${GITHUB_REF#refs/tags/}
+          echo "当前标签: $TAG_NAME"
+
+          # 使用 GitHub API 检查发布
+          RELEASE_INFO=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/releases/tags/$TAG_NAME")
+
+          # 检查发布是否存在
+          if echo "$RELEASE_INFO" | grep -q '"message": "Not Found"'; then
+            echo "错误: 发布未找到"
+            exit 1
+          fi
+
+          # 检查资产数量
+          ASSET_COUNT=$(echo "$RELEASE_INFO" | jq '.assets | length')
+          echo "发布资产数量: $ASSET_COUNT"
+
+          if [ "$ASSET_COUNT" -lt 4 ]; then
+            echo "警告: 发布资产数量少于预期 (期望至少 4 个文件)"
+          fi
+
+          # 列出所有资产
+          echo "发布资产列表:"
+          echo "$RELEASE_INFO" | jq -r '.assets[].name'
+
+          echo "发布验证完成"
+
+      - name: Notify on failure
+        if: failure()
+        run: |
+          echo "发布验证失败，请检查构建日志"
+          # 这里可以添加通知逻辑，如发送邮件或 Slack 消息
