--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -18,7 +18,8 @@
     "build:mac": "cross-env NODE_ENV=production electron-vite build && electron-builder --mac",
     "build:linux": "cross-env NODE_ENV=production electron-vite build && electron-builder --linux",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "cross-env NODE_ENV=development tsx src/main/db/migrate.ts"
+    "db:migrate": "cross-env NODE_ENV=development tsx src/main/db/migrate.ts",
+    "start-file-server": "pnpm exec tsx scripts/simple-update-server.ts"
   },
   "dependencies": {
     "@google/genai": "^1.3.0",
@@ -40,6 +41,7 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron-toolkit/typed-ipc": "^1.0.2",
+    "@electron/notarize": "^3.1.0",
     "@electron/rebuild": "^4.0.1",
     "@ferrucc-io/emoji-picker": "^0.0.44",
     "@iconify-json/tdesign": "^1.2.8",
