--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ant-chat",
   "type": "module",
-  "version": "0.6.0",
+  "version": "1.0.0-alpha.0",
   "engines": {
     "node": ">=22.0.0",
     "pnpm": ">=10.0.0"
