--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron",
   "type": "module",
-  "version": "0.6.0",
+  "version": "1.0.0-alpha.0",
   "private": true,
   "main": "out/main/index.cjs",
   "scripts": {
