chore: 注释掉 Windows 代码签名配置和相关环境变量

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,7 +62,7 @@ jobs:
         run: pnpm build:win
         env:
           # Windows 代码签名环境变量
-          WIN_CSC_LINK: certificate.p12
+          # WIN_CSC_LINK: certificate.p12
           # WIN_CSC_KEY_PASSWORD: ${{ secrets.WIN_CSC_KEY_PASSWORD }}
           # GitHub 发布配置
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
