--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -2,7 +2,6 @@
   "name": "electron",
   "type": "module",
   "version": "1.0.0-alpha.0",
-  "private": true,
   "description": "Ant Chat Electron App",
   "author": {
     "email": "ysansan.tech@icloud.com",
@@ -23,8 +22,7 @@
     "build:mac": "cross-env NODE_ENV=production electron-vite build && electron-builder --mac",
     "build:linux": "cross-env NODE_ENV=production electron-vite build && electron-builder --linux",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "cross-env NODE_ENV=development tsx src/main/db/migrate.ts",
-    "start-file-server": "pnpm exec tsx scripts/simple-update-server.ts"
+    "db:migrate": "cross-env NODE_ENV=development tsx src/main/db/migrate.ts"
   },
   "dependencies": {
     "@google/genai": "^1.3.0",
