--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -10,10 +10,10 @@
   "main": "out/main/index.cjs",
   "scripts": {
     "start": "electron-vite preview",
+    "postinstall": "electron-builder install-app-deps",
     "dev": "electron-vite dev",
     "prebuild": "electron-vite build",
     "type-check": "tsc -b",
-    "postinstall": "pnpm rebuild:electron",
     "test:unit": "vitest -c ./vitest.config.ts",
     "rebuild:electron": "pnpm exec electron-rebuild -f -w better-sqlite3",
     "rebuild:node": "pnpm rebuild better-sqlite3",
@@ -71,7 +71,7 @@
     "dexie": "^4.0.11",
     "drizzle-kit": "^0.31.1",
     "drizzle-zod": "^0.7.1",
-    "electron": "^36.2.1",
+    "electron": "^36.9.1",
     "electron-builder": "^26.0.0",
     "electron-devtools-installer": "^4.0.0",
     "electron-vite": "^4.0.0",
