--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@eslint-react/eslint-plugin": "^1.48.5",
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.13.10",
-    "@vitest/coverage-v8": "3.1.1",
+    "@vitest/coverage-v8": "4.0.14",
+    "@vitest/ui": "4.0.14",
     "eslint": "^9.31.0",
     "eslint-plugin-better-tailwindcss": "^3.6.2",
     "eslint-plugin-format": "^1.0.1",
@@ -47,7 +48,7 @@
     "tsx": "^4.19.3",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.19.0",
-    "vitest": "3.1.1",
+    "vitest": "4.0.14",
     "zod": "^3.24.4"
   }
 }
