--- a/package.json
+++ b/package.json
@@ -27,19 +27,20 @@
     "release:major": "node scripts/create-release.js major"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.17.0",
+    "@antfu/eslint-config": "^6.2.0",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@electron-toolkit/preload": "^3.0.1",
-    "@eslint-react/eslint-plugin": "^1.48.5",
+    "@eslint-react/eslint-plugin": "^2.3.9",
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.13.10",
     "@vitest/coverage-v8": "4.0.14",
     "@vitest/ui": "4.0.14",
+    "electron-vite": "^4.0.0",
     "eslint": "^9.31.0",
     "eslint-plugin-better-tailwindcss": "^3.6.2",
     "eslint-plugin-format": "^1.0.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.20",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
