chore(deps): 配置 pnpm 构建脚本白名单
- shamefully-hoist=true: 启用依赖提升
- onlyBuiltDependencies: 添加构建脚本白名单
- 解决 @parcel/watcher、electron-winstaller、esbuild 构建脚本警告

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,9 @@
 packages:
   - packages/*
+
 onlyBuiltDependencies:
+  - '@parcel/watcher'
   - better-sqlite3
   - electron
+  - electron-winstaller
+  - esbuild
